--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
+    "form-data": "^2.3.2",
+    "jsonwebtoken": "^8.1.1",
     "mysql": "^2.15.0",
-    "nocache": "^2.0.0"
+    "nocache": "^2.0.0",
+    "node-fetch": "^2.0.0"
   }
 }
