--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.1.1",
     "mysql": "^2.15.0",
     "nocache": "^2.0.0",
-    "node-fetch": "^2.0.0"
+    "node-fetch": "^2.0.0",
+    "uuid": "^3.2.1"
   }
 }
