--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "express-ws": "^3.0.0",
     "form-data": "^2.3.2",
     "jsonwebtoken": "^8.1.1",
     "mysql": "^2.15.0",
