--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mysql": "^2.15.0",
     "nocache": "^2.0.0",
     "node-fetch": "^2.0.0",
+    "swagger-jsdoc": "^1.9.7",
+    "swagger-ui-express": "^2.0.15",
     "uuid": "^3.2.1"
   }
 }
