--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/app.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/app.js\"",
     "build": "tsc",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "test": "tsc && mocha --exit dist/test"
   },
   "repository": {
     "type": "git",
@@ -16,8 +17,12 @@
   "author": "Thorsten Liese",
   "license": "ISC",
   "devDependencies": {
+    "@types/mocha": "^5.0.0",
     "@types/node": "^9.4.6",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "concurrently": "^3.5.1",
+    "mocha": "^5.0.5",
     "nodemon": "^1.15.1",
     "typescript": "^2.7.2"
   },
