--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "chai-http": "^4.0.0",
     "concurrently": "^3.5.1",
     "mocha": "^5.0.5",
-    "nodemon": "^1.15.1",
-    "typescript": "^2.7.2"
+    "nodemon": "^1.15.1"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -40,6 +39,7 @@
     "redis": "^2.8.0",
     "swagger-jsdoc": "^1.9.7",
     "swagger-ui-express": "^2.0.15",
+    "typescript": "^2.7.2",
     "uuid": "^3.2.1",
     "winston": "^2.4.1"
   }
