--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/app.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/app.js\"",
     "build": "tsc",
+    "build_and_start": "tsc && node dist/app.js",
     "postinstall": "tsc",
     "test": "tsc && mocha --exit dist/test"
   },
