--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node dist/app.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/app.js\"",
     "build": "tsc",
-    "build_and_start": "tsc && node dist/app.js",
     "postinstall": "tsc",
-    "test": "tsc && mocha --exit dist/test"
+    "test": "tsc && mocha --exit dist/test",
+    "deploy": "tsc && eb deploy"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
     "chai-http": "^4.0.0",
     "concurrently": "^3.5.1",
     "mocha": "^5.0.5",
-    "nodemon": "^1.15.1"
+    "nodemon": "^1.15.1",
+    "typescript": "^2.7.2"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -40,7 +41,6 @@
     "redis": "^2.8.0",
     "swagger-jsdoc": "^1.9.7",
     "swagger-ui-express": "^2.0.15",
-    "typescript": "^2.7.2",
     "uuid": "^3.2.1",
     "winston": "^2.4.1"
   }
