BCSDM-5: enable websockets for nginx in EB

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,8 @@
 branch-defaults:
   develop:
     environment: dncash-io-dev
+  master:
+    environment: dncash-io-dev
 global:
   application_name: dncash-io
   branch: null
