--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "base32": "0.0.6",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "express-ws": "^3.0.0",
