--- a/.ebextensions/enable-websockets.config
+++ b/.ebextensions/enable-websockets.config
@@ -4,4 +4,5 @@ container_commands:
       sed -i '/\s*proxy_set_header\s*Connection/c \
               proxy_set_header Upgrade $http_upgrade;\
               proxy_set_header Connection "upgrade";\
+              proxy_read_timeout 3600s;\
               ' /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf
