--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "postinstall": "tsc",
     "test": "tsc && mocha --exit dist/test",
-    "deploy": "tsc && eb deploy"
+    "deploy": "tsc && node dist/awsdeploy.js"
   },
   "repository": {
     "type": "git",
