--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-jwt": "^5.3.1",
     "express-ws": "^3.0.0",
     "form-data": "^2.3.2",
+    "generate-password": "^1.4.0",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
