--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "generate-password": "^1.4.0",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
+    "mqtt": "^2.18.0",
     "mysql": "^2.15.0",
     "nocache": "^2.0.0",
     "node-fetch": "^2.1.2",
