--- a/package.json
+++ b/package.json
@@ -19,29 +19,30 @@
   "author": "Thorsten Liese",
   "license": "ISC",
   "devDependencies": {
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^9.6.18",
+    "@types/mocha": "^5.2.1",
+    "@types/node": "^9.6.20",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "concurrently": "^3.5.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.1"
   },
   "dependencies": {
     "base32": "0.0.6",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "express-ws": "^3.0.0",
+    "express-ws": "^4.0.0",
     "form-data": "^2.3.2",
     "generate-password": "^1.4.0",
-    "jsonwebtoken": "^8.2.1",
+    "jsonwebtoken": "^8.2.2",
     "morgan": "^1.9.0",
     "mqtt": "^2.18.0",
     "mysql": "^2.15.0",
     "nocache": "^2.0.0",
     "node-fetch": "^2.1.2",
     "node-forge": "^0.7.5",
+    "node-schedule": "^1.3.0",
     "redis": "^2.8.0",
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^1.9.7",
