--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "author": "Thorsten Liese",
   "license": "ISC",
   "devDependencies": {
-    "@types/mocha": "^5.2.1",
-    "@types/node": "^9.6.21",
+    "@types/chai-http": "^3.0.5",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^9.6.31",
     "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "concurrently": "^3.5.1",
+    "chai-http": "^4.2.0",
+    "concurrently": "^4.0.1",
     "mocha": "^5.2.0",
-    "nodemon": "^1.17.5",
-    "typescript": "^2.9.1"
+    "nodemon": "^1.18.4",
+    "typescript": "^3.0.3"
   },
   "dependencies": {
     "base32": "0.0.6",
@@ -35,19 +36,19 @@
     "express-ws": "^4.0.0",
     "form-data": "^2.3.2",
     "generate-password": "^1.4.0",
-    "jsonwebtoken": "^8.2.2",
-    "morgan": "^1.9.0",
-    "mqtt": "^2.18.0",
-    "mysql": "^2.15.0",
+    "jsonwebtoken": "^8.3.0",
+    "morgan": "^1.9.1",
+    "mqtt": "^2.18.8",
+    "mysql": "^2.16.0",
     "nocache": "^2.0.0",
-    "node-fetch": "^2.1.2",
-    "node-forge": "^0.7.5",
+    "node-fetch": "^2.2.0",
+    "node-forge": "^0.7.6",
     "node-schedule": "^1.3.0",
     "redis": "^2.8.0",
     "speakeasy": "^2.0.0",
-    "swagger-jsdoc": "^1.9.7",
-    "swagger-ui-express": "^3.0.9",
-    "uuid": "^3.2.1",
-    "winston": "^2.4.2"
+    "swagger-jsdoc": "^3.0.3",
+    "swagger-ui-express": "^3.0.10",
+    "uuid": "^3.3.2",
+    "winston": "^2.4.4"
   }
 }
