--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dncash-io",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "dncash.io core API service",
   "main": "app.ts",
   "scripts": {
@@ -38,6 +38,7 @@
     "generate-password": "^1.4.1",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
+    "mosca": "^2.8.3",
     "mqtt": "^2.18.8",
     "mysql": "^2.16.0",
     "nocache": "^2.0.0",
